atlas/frontend/src/HomePage.css
button.active {
    background-color: #4CAF50; /* Green background for the active button */
    color: white;
  }

.home-page {
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px;
  }
  
  .search-bar {
    display: flex;
    margin-bottom: 20px;
  }
  
  .search-bar input {
    flex: 1;
    padding: 10px;
    font-size: 16px;
  }
  
  .search-bar button {
    padding: 10px 20px;
    font-size: 16px;
    background-color: #007bff;
    color: #fff;
    border: none;
    cursor: pointer;
  }
  
  .game-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 20px;
  }
  
  .game-card {
    border: 1px solid rgba(255, 255, 255, 0.833);
    background-color: rgb(19, 19, 19);
    color: rgb(223, 223, 223);
    border-radius: 4px;
    padding: 10px;
    text-align: center;
    transition: transform 0.2s ease;
  }

  .game-card:hover {
    transform: scale(1.03);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  }

  .rating-box {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 4px 8px;
    border-radius: 4px;
    font-weight: bold;
    margin-bottom: 10px;
    width: 100%;
    box-sizing: border-box;
    border: 1px solid
  }
  
  .game-card img {
    width: 100%;
    height: auto;
    margin-bottom: 10px;
    border: 3px solid rgba(255, 255, 255, 0.833);
    border-radius: 4px;
  }
  
  /* .pagination {
    display: flex;
    justify-content: center;
    margin-top: 20px;
  }
  
  .pagination button {
    padding: 8px 12px;
    margin: 0 5px;
    font-size: 14px;
    background-color: #f0f0f0;
    border: none;
    cursor: pointer;
  }
  
  .pagination button.active {
    background-color: #007bff;
    color: #fff;
  } */



.rating-green {
    background-color: #4CAF50;
    color: rgb(223, 223, 223);
}

.rating-orange {
    background-color: #ffaa00;
    color: rgb(255, 255, 255);
}

.rating-red {
    background-color: #F44336;
    color: rgb(255, 255, 255);
}

